# dual-lang-sub-tool

./: .gitignore  Dockerfile  README.md  config.yaml  dual_sub_conf.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
srt_tool/: main.py
tests/: conftest.py  test_main.py
