[tool.poetry]
name = "dual-lang-sub-tool"
version = "0.1.0"
description = "A tool for make and fine-tune bilingual subtitles."
authors = ["colin <Colin_XKL@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "srt_tool"}]

[tool.poetry.dependencies]
python = "^3.8"
srt = "^3.5.3"
srtmerge = "^1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
